--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,13 +1,10 @@
-
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'my_new_project'
+name: 'curso_data_eng'
 version: '1.0.0'
 config-version: 2
 
 # This setting configures which "profile" dbt uses for this project.
 profile: 'default'
+
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -36,7 +33,18 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my_new_project:
+  curso_data_eng:
     # Applies to all files under models/example/
-    example:
+    staging:
+      +database: "ANTOINE_YAM_DEV_BRONZE_DB"      
+      +schema: staging
+      +materialized: view
+
+    marts:
+      +database: "ANTOINE_YAM_DEV_GOLD_DB"      
+      +schema: marts
       +materialized: table
+
+seeds:
+    +database: "ANTOINE_YAM_DEV_BRONZE_DB"
+    +schema: "SEEDS"
