--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -31,18 +31,30 @@ clean-targets: # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  curso_data_eng:
+  +transient: false
+  curso:
     # Applies to all files under models/example/
+
     staging:
-      +database: "ANTOINE_YAM_DEV_BRONZE_DB"
-      +schema: staging
       +materialized: view
-
+      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+      google_sheets:
+        +schema: google_sheets
+      sql_server_dbo:
+        +schema: sql_server_dbo
+      
     marts:
-      +database: "ANTOINE_YAM_DEV_GOLD_DB"
-      +schema: marts
       +materialized: table
-
+      +database: "{{ env_var('DBT_ENVIRONMENTS') }}_GOLD_DB"
+      core:
+        +schema: core
 seeds:
-  +database: "ANTOINE_YAM_DEV_BRONZE_DB"
-  +schema: "SEEDS"
+  +schema: seed_data
+  +database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB"        
+snapshots:
+  +transient: false
+  +target_database: "{{ env_var('DBT_ENVIRONMENTS') }}_SILVER_DB"
+  +target_schema: snapshots
+
+vars:
+  budget_date: '2024-11-14'
