--- a/models/staging/sql_server_dbo/_sql_server_dbo__sources.yml
+++ b/models/staging/sql_server_dbo/_sql_server_dbo__sources.yml
@@ -1,10 +1,9 @@
 version: 2
 
 sources:
-
-  - name: sql_server_dbo # name of the source 
+  - name: sql_server_dbo # name of the source
     schema: sql_server_dbo # this is the schema our raw data lives in
-    database: ANTOINE_YAM_DEV_BRONZE_DB # this is the name of our database
+    database: "{{ env_var('DBT_ENVIRONMENTS') }}_BRONZE_DB" # this is the name of our database
 
     quoting:
       database: false
@@ -12,11 +11,10 @@ sources:
       identifier: false
 
     freshness:
-      warn_after: {count: 1000000, period: hour}
-      error_after: {count: 2000000, period: hour}
+      warn_after: { count: 1000000, period: hour }
+      error_after: { count: 2000000, period: hour }
 
     tables:
-
       - name: orders
         loaded_at_field: _fivetran_synced
         columns:
@@ -45,6 +43,27 @@ sources:
           - name: _fivetran_deleted
           - name: _fivetran_synced
 
+
+
+      - name: order_items
+        description: ""
+        columns:
+          - name: order_id
+            data_type: varchar
+            description: ""
+          - name: product_id
+            data_type: varchar
+            description: ""
+          - name: quantity
+            data_type: number
+            description: ""
+          - name: _fivetran_deleted
+            data_type: boolean
+            description: ""
+          - name: _fivetran_synced
+            data_type: timestamp_tz
+            description: ""
+
       - name: users
         loaded_at_field: _fivetran_synced
         columns:
@@ -62,3 +81,54 @@ sources:
           - name: email
           - name: _fivetran_deleted
           - name: _fivetran_synced
+
+      - name: events
+        description: >
+          Data about events in the platform of demo.
+        columns:
+          - name: event_id
+            description: >
+              UUID of each unique event on the platform.
+            tests:
+              - not_null
+              - unique
+          - name: session_id
+            description: >
+              UUID of each browsing session on the platform which can contain many events.
+            tests:
+              - not_null
+          - name: user_id
+            description: >
+              UUID of the user that this event is associated with.
+            tests:
+              - not_null
+          - name: page_url
+            description: >
+              URL that the event happened on.
+            tests:
+              - not_null
+          - name: created_at
+            description: >
+              Timestamp of the event (UTC).
+            tests:
+              - not_null
+          - name: event_type
+            description: >
+              Type of event.
+            tests:
+              - not_null
+          - name: order_id
+            description: >
+              If the event is specific to an order (mostly used for checkout).
+          - name: product_id
+            description: >
+              If the event is specific to a product.
+          - name: _fivetran_synced
+            description: >
+              Date that the data was loaded.
+            tests:
+              - not_null
+
+
+
+
