--- a/models/staging/google_sheets/base/base__models.yml
+++ b/models/staging/google_sheets/base/base__models.yml
@@ -6,7 +6,7 @@ models:
     config:
       materialized: view
       contract:
-        enforced: true
+        enforced: false
     description: >
       Info about budget
 
